@@ -161,16 +161,16 @@ public class CreateRepresentationInputProcessor implements IInputPreProcessor, I
         Optional<ViewDefinition> optViewDef = Optional.empty();
         var representationDescriptionId = input.representationDescriptionId();
         if (Objects.equals(SysONRepresentationDescriptionIdentifiers.GENERAL_VIEW_DIAGRAM_DESCRIPTION_ID, representationDescriptionId)) {
-            var generalViewViewDef = this.elementUtil.findByNameAndType(containerElement, StandardDiagramsConstants.GV, ViewDefinition.class);
+            var generalViewViewDef = this.elementUtil.findByNameAndType(containerElement, StandardDiagramsConstants.GV_QN, ViewDefinition.class);
             optViewDef = Optional.ofNullable(generalViewViewDef);
         } else if (Objects.equals(SysONRepresentationDescriptionIdentifiers.INTERCONNECTION_VIEW_DIAGRAM_DESCRIPTION_ID, representationDescriptionId)) {
-            var generalViewViewDef = this.elementUtil.findByNameAndType(containerElement, StandardDiagramsConstants.IV, ViewDefinition.class);
+            var generalViewViewDef = this.elementUtil.findByNameAndType(containerElement, StandardDiagramsConstants.IV_QN, ViewDefinition.class);
             optViewDef = Optional.ofNullable(generalViewViewDef);
         } else if (Objects.equals(SysONRepresentationDescriptionIdentifiers.ACTION_FLOW_VIEW_DIAGRAM_DESCRIPTION_ID, representationDescriptionId)) {
-            var generalViewViewDef = this.elementUtil.findByNameAndType(containerElement, StandardDiagramsConstants.AFV, ViewDefinition.class);
+            var generalViewViewDef = this.elementUtil.findByNameAndType(containerElement, StandardDiagramsConstants.AFV_QN, ViewDefinition.class);
             optViewDef = Optional.ofNullable(generalViewViewDef);
         } else if (Objects.equals(SysONRepresentationDescriptionIdentifiers.STATE_TRANSITION_VIEW_DIAGRAM_DESCRIPTION_ID, representationDescriptionId)) {
-            var generalViewViewDef = this.elementUtil.findByNameAndType(containerElement, StandardDiagramsConstants.STV, ViewDefinition.class);
+            var generalViewViewDef = this.elementUtil.findByNameAndType(containerElement, StandardDiagramsConstants.STV_QN, ViewDefinition.class);
             optViewDef = Optional.ofNullable(generalViewViewDef);
         } else if (Objects.equals(SysONRepresentationDescriptionIdentifiers.REQUIREMENTS_TABLE_VIEW_DESCRIPTION_ID, representationDescriptionId)) {
             optViewDef = Optional.empty();
